<resources>
    <string name="app_name">Test Task</string>
    <string name="login">E-mail</string>
    <string name="username">UserName</string>
    <string name="password">******</string>
    <string name="sign">Create account</string>
    <string name="bu_login">Login</string>
    <string name="register">New? Register here!</string>

    <string name="invalid_username">Empty field</string>
    <string name="invalid_email">Invalid E-mail format</string>
    <string name="invalid_password">Invalid password format</string>

    <string name="no_text_char">Please wait while data is loading</string>
    <string name="internetError">An error occurred during download!</string>
    <string name="period">Dollar price (USD) for \n %1$s - %2$s</string>
    <string name="date_currency">Price: %1$s \n Date: %2$s</string>

    <string name="invalidEmPass">Invalid email or password </string>
</resources>