<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity"
    android:id="@+id/rl1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="134dp"
            android:layout_height="138dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Login Form"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/style_edit"
            android:hint="@string/login"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/dark"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/style_edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/dark"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/bu_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/style_button"
            android:enabled="false"
            android:padding="15dp"
            android:text="@string/bu_login"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bu_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>