<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity"
    android:id="@+id/r_reg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register Form"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:fontFamily="cursive"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_edit"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/dark"
            android:textSize="18sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_edit"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:hint="@string/login"
            android:textColor="@color/white"
            android:textColorHint="@color/dark"
            android:textSize="18sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_edit"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/dark"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/bu_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="15dp"
            android:text="@string/sign"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@color/blue_dark"
            android:textStyle="bold"
            android:enabled="false"/>
    </LinearLayout>

</RelativeLayout>